# ruststudy

./: .gitignore  README.md
_10_ownership/: Cargo.toml
_10_ownership/src/: main.rs
_11_exercises/: Cargo.toml
_11_exercises/src/: main.rs
_13_structs/: Cargo.toml  README.md
_13_structs/src/: main.rs
_15_Methods/: Cargo.toml
_15_Methods/src/: main.rs
_16_Patter_Matching/: Cargo.toml
_16_Patter_Matching/src/: main.rs
_17_Exercies/: Cargo.toml  README.md
_17_Exercies/src/: main.rs
_18_Control_Flow/: Cargo.toml
_18_Control_Flow/src/: main.rs
_19_Standard_Library/: Cargo.toml  README.md
_19_Standard_Library/src/: main.rs
_20_Modules/: Cargo.toml
_20_Modules/src/: main.rs
_21_Exercies_Luhn_Algorithm/: Cargo.toml
_21_Exercies_Luhn_Algorithm/src/: main.rs
_21_Exercies_Strings_and_Iterators/: Cargo.toml
_21_Exercies_Strings_and_Iterators/src/: main.rs
_23_Generics/: Cargo.toml
_23_Generics/src/: main.rs
_24_Traits/: Cargo.toml
_24_Traits/src/: main.rs
_25_Important_Traits/: Cargo.toml
_25_Important_Traits/src/: main.rs
_26_Exercies/: Cargo.toml
_26_Exercies/src/: main.rs
_27_Error_Handling/: Cargo.toml
_28_Testing/: Cargo.toml
_29_Unsafe_Rust/: Cargo.toml
_47_Threads/: Cargo.toml
_51_2_Exercises/: Cargo.toml
_51_Exercies/: Cargo.toml
_52_4_Tasks/: Cargo.toml
_52_5_Async_Channels/: Cargo.toml
_52_Async_Basics/: Cargo.toml
_53_Control_Flow/: Cargo.toml
_53_Control_Flow/src/: main.rs
_54_Pitfalls/: Cargo.toml
_8_variables/: Cargo.toml
syntax_basic_exercies_prob/: Cargo.toml
(+13 files in other folders)
