[package]
name = "_53_Control_Flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures = "0.3.28"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "io-util", "rt"] }
